# open-webui-gitlab-tool

./: .env  .env.example  .gitignore  AGENT_ARCHITECTURE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  CHANGELOG.md  DESIGN_SPECIFICATION.md  DOCUMENTATION_INDEX.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION.md  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SERVER.md  USAGE.md  ZAMMAD_DESIGN_SPECIFICATION.md  docker-compose.yml  examples.py  gitlab.py  gitlab_smolagent.py  gitlab_v1_legacy.py  pyproject.toml  requirements.txt  test_env.sh  test_server.py  zammad.py
agents/: README.md  gitlab_deepagent.py  model_utils.py
docs/: gitlab-mcp.md  gitlab-tool-groups.md
flock_gitlab/agents/: base.py  code_review.py  create_commit.py  create_issue.py  create_merge_request.py  get_file.py  get_issue.py  get_merge_request.py  get_project.py  list_issues.py  list_merge_requests.py  list_pipelines.py  list_projects.py  orchestrator.py  pipeline_triage.py  summarize_issue.py  summarize_merge_request.py
flock_gitlab/server/: main.py
flock_gitlab/utils/: gitlab_api.py  ollama_api.py
gitlab_tool/: __init__.py  config.py  main.py
gitlab_tool/agents/: __init__.py  base.py  pipeline.py  repository.py  review.py  summarization.py
gitlab_tool/artifacts/: __init__.py  gitlab.py  requests.py
gitlab_tool/client/: __init__.py  gitlab.py  ollama.py
gitlab_tool/utils/: __init__.py  approval.py  concurrency.py
server/: app.py
server/templates/: index.html
src/: __init__.py  blackboard.py  config.py  gitlab_client.py  main.py  models.py  ollama_client.py  orchestrator.py
src/agents/: __init__.py  base.py  code_reviewer.py  issue_summarizer.py  mr_analyzer.py  pipeline_reviewer.py  project_planner.py  repo_browser.py
tests/: conftest.py  test_blackboard.py  test_gitlab_client.py
tools/gitlab/: __init__.py  models.py  toolkit.py
tools/gitlab/tools/: __init__.py  common.py  helpers.py  issues.py  merge_requests.py  pipelines.py  projects.py  repository.py  wiki.py
